Used Events definition as Disciminated Union in exercises
Replaced When method name into Evolve, as it's now more aligned with how people are doing it.